--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^10.8.2"
   },
   "dependencies": {
+    "common-tags": "^1.8.2",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5"
   },
